--- a/ebook_searching/pubspec.yaml
+++ b/ebook_searching/pubspec.yaml
@@ -15,11 +15,14 @@ dependencies:
   flutter_image_slideshow: any
   carousel_slider: ^5.0.0
   intl: ^0.19.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.13
+  json_serializable: ^6.8.0
 
 flutter:
   uses-material-design: true
@@ -27,3 +30,4 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
+
