--- a/ebook_searching/pubspec.yaml
+++ b/ebook_searching/pubspec.yaml
@@ -16,6 +16,12 @@ dependencies:
   carousel_slider: ^5.0.0
   intl: ^0.19.0
   json_annotation: ^4.9.0
+  dartz: ^0.10.1
+  equatable: ^2.0.5
+  dio: ^5.4.0
+  flutter_bloc: ^8.1.3
+  get_it: ^7.6.4
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
