--- a/ebook_searching/pubspec.yaml
+++ b/ebook_searching/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   get_it: ^7.6.4
   shared_preferences: ^2.2.2
+  realm: ^20.0.0
 
 dev_dependencies:
   flutter_test:
