--- a/ebook_searching/pubspec.yaml
+++ b/ebook_searching/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   get_it: ^7.6.4
   shared_preferences: ^2.2.2
   realm: ^20.0.0
+  iconsax: ^0.0.8
 
 dev_dependencies:
   flutter_test:
