--- a/ebook_searching/pubspec.yaml
+++ b/ebook_searching/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   shared_preferences: ^2.2.2
   realm: ^20.0.0
   iconsax: ^0.0.8
+  uuid: ^4.4.2
 
 dev_dependencies:
   flutter_test:
